--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -60,15 +60,9 @@
     margin: 93px 0 80px;
   }
   img {
-    max-width: 100%;
+    width: 100%;
     margin: 0 auto;
   }
-}
-.about-banner {
-  background-repeat: no-repeat;
-  background-position: center;
-  min-height: 600px;
-  background-size: cover;
 }
 
 .about-slider {
