--- a/scss/main.scss
+++ b/scss/main.scss
@@ -294,6 +294,7 @@ button {
       cursor: pointer;
       display: inline-block;
       padding-right: 0;
+      padding-bottom: 16px;
       margin-right: 16px;
     }
 
@@ -334,7 +335,7 @@ button {
       display: inline-block;
       padding-left: 0;
       &:hover {
-        color: $color-light-blue;
+
         background: #FFFFFF;
       }
     }
