--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -618,7 +618,7 @@
     width: 45px;
     height: 25px;
     background: url("../media/shevron.svg") no-repeat center;
-    display: inline-block;
+    display: block;
     cursor: pointer;
     float: right;
     margin-top: -27px;
