adding custom elements (table, img)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -903,3 +903,18 @@ footer {
     display: none;
   }
 }
+
+//----- wrap for self added tables-----
+.table-wrap {
+  width: 100%;
+  overflow-x: auto;
+  margin-bottom: 20px;
+  &::-webkit-scrollbar {
+    height: 5px;
+    background-color: #F5F5F5;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $color-light-blue;
+    cursor: pointer;
+  }
+}
