--- a/scss/_contacts.scss
+++ b/scss/_contacts.scss
@@ -2,6 +2,9 @@
   .common-contacts {
     background: #F5F5F5;
     padding-bottom: 80px;
+    h1 {
+      margin-bottom: 53px;
+    }
   }
   .personal-contacts {
     padding-top: 71px;
@@ -18,7 +21,7 @@
     }
   }
   h2 {
-    margin: 45px 0 0;
+    margin: 0;
   }
 .contact-form {
   position: static;
