--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -18,21 +18,6 @@
   main .contact-form .form-item {
     width: 280px;
   }
-  .program {
-    h1 {
-      padding-top: 26px;
-    }
-  }
-  .news-item {
-    h1 {
-      padding-top: 26px;
-    }
-  }
-  .news {
-    h1 {
-      padding-top: 26px;
-    }
-  }
   body h1 {
     font-size: 20px !important;
     line-height: 23px !important;
@@ -126,7 +111,7 @@
   .map-wrap {
     height: 320px !important;
   }
-  .tab-content table tr {
+  .tab-content table:not(.customTable) tr {
     display: flex;
     flex-wrap: wrap;
     height: auto;
@@ -265,11 +250,7 @@
     grid-template-columns: 1fr;
   }
   .contacts {
-    h2 {
-      margin-top: 40px;
-    }
-
-    .map-wrap {
+       .map-wrap {
       margin-top: 61px;
     }
 
@@ -344,13 +325,6 @@
       margin: 0 auto;
     }
   }
-  body .offices h2 {
-    margin-bottom: 21px;
-    margin-top: 48px;
-  }
-  body .offices h1 {
-    margin-bottom: 0;
-  }
   body .offices .map-wrap,
   body .contacts .map-wrap {
     height: 435px;
@@ -358,14 +332,12 @@
 }
 
 @media (max-width: 991.98px) {
-  body .offices h2 {
-    margin-bottom: 25px;
-    margin-top: 60px;
+  body .offices h1 {
+    margin-bottom: 0;
   }
-  .news-item {
-    h1 {
-      padding-top: 55px;
-    }
+  body .offices h2 {
+    margin-bottom: 21px;
+    margin-top: 48px;
   }
   main {
     h1 {
@@ -527,12 +499,7 @@
   }
   .news {
     h1 {
-      padding-top: 43px;
-    }
-  }
-  .program {
-    h1 {
-      padding-top: 43px;
+      margin-bottom: 48px;
     }
   }
 }
@@ -707,11 +674,6 @@
 }
 
 @media (min-width: 992px) {
-  .news-item {
-    h1 {
-      padding-top: 87px;
-    }
-  }
   .offices {
     .row {
       margin-bottom: 80px;
