--- a/scss/_news-item.scss
+++ b/scss/_news-item.scss
@@ -1,35 +1,54 @@
 .news-item {
   position: relative;
+
+  p > img {
+    margin: 20px auto;
+    display: block;
+    width: 50%;
+    max-width: 50%;
+    height: auto;
+  }
+
+  table {
+    margin: 0 auto;
+  }
+
   h1 {
     text-align: center;
-    margin-bottom: 62px;
-    padding-top: 87px;
+    margin-bottom: 20px;
   }
+
   .news-date {
     color: #7F899D;
     font-size: 18px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
   }
+
   .news-descr {
     font-weight: $semibold;
-    font-size: 24px;
+    font-size: 20px;
     color: #222222;
     margin-bottom: 44px;
+
     img {
       display: block;
       margin: 34px auto 0;
-      width: 100%;
-      max-width: 100%;
+      width: 50%;
+      max-width: 50%;
+      height: auto;
     }
   }
+
   .back-btn {
     margin-top: 80px;
     text-align: right;
+
     .cta {
       position: relative;
       margin: auto;
       padding: 19px 22px;
       transition: all .2s ease;
+
       &:before {
         content: "";
         position: absolute;
@@ -66,29 +85,38 @@
       }
 
       &:hover {
-        &:before{
+        &:before {
           width: 100%;
+
           img {
             transform: translateX(0)
           }
         }
       }
+
       &:active {
         transform: scale(.96)
       }
     }
   }
+
   .gradient-btn {
     width: 166px;
+
     .fas {
       color: #FFFFFF;
       font-size: 28px;
       margin-right: 15px;
     }
 
+    a:hover {
+      color: #FFFFFF;
+    }
   }
+
   a {
     color: $color-blue;
+
     &:hover {
       color: $color-light-blue;
     }
@@ -98,10 +126,12 @@
 .news-img {
   .slick-slide {
     border: none;
+
     &:focus {
       outline: none;
     }
   }
+
   img {
     max-width: 100%;
     padding: 0 15px;
@@ -109,6 +139,7 @@
     height: 232px;
     object-fit: cover;
   }
+
   .slick-dots {
     list-style-type: none;
     display: flex;
@@ -116,9 +147,11 @@
     justify-content: center;
     margin-top: 30px;
     padding: 0;
+
     li {
       display: inline-block;
       margin: 0 10px;
+
       button {
         border: none;
         width: 4px;
