--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -107,7 +107,7 @@
       color: $color-light-blue;
     }
   }
-  table {
+  table:not(.customTable) {
     width: 100%;
     tr {
       height: 80px;
