change news descr font

--- a/scss/_news-item.scss
+++ b/scss/_news-item.scss
@@ -26,7 +26,8 @@
 
   .news-descr {
     font-weight: $semibold;
-    font-size: 20px;
+    font-size: 18px;
+    line-height: 27px;
     color: #222222;
     margin-bottom: 44px;
 
