video height setup

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -133,8 +133,8 @@
   width: 100%;
   video {
     width: 100%;
-    padding-bottom: 30px;
+    height: 410px;
     outline: none;
+    object-fit: cover;
   }
-
 }
