--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,4 +1,9 @@
 @media (max-width: 320px) {
+  body .about .video-wrap {
+    video {
+      height: 155px;
+    }
+  }
   header .contact-form {
     display: block;
     position: fixed;
@@ -10,6 +15,14 @@
     .form-item,
     .download-file {
       width: 100%;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  body .about .video-wrap {
+    video {
+      height: 185px;
     }
   }
 }
@@ -170,6 +183,12 @@
 }
 
 @media (max-width: 767.98px) {
+  .about .video-wrap {
+    video {
+      height: 288px;
+    }
+  }
+
   body .product-description-sm .tab-content table {
     tr td:first-child {
       width: auto;
@@ -505,8 +524,12 @@
 }
 
 @media (max-width: 1199.98px) {
+  .video-wrap {
+    video {
+      height: 345px;
+    }
+  }
   .top_banner_slider .banner img {
-    //height: 100%;
     width: 100%;
   }
   header .header-btm {
@@ -874,6 +897,11 @@
     overflow-y: auto;
     max-height: calc(100vh - 68px);
     padding-bottom: 100px;
+  }
+  @media (max-width: 992px) {
+    body .video-wrap video {
+      object-fit: none;
+    }
   }
 }
 
